Licenses the project under an Apache license