@@ -3,8 +3,8 @@
   :url "http://example.com/FIXME"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :jvm-opts ["-Xmx2G" "-server"] 
+  :jvm-opts ["-Xms512m" "-Xmx2G" "-XX:MaxPermSize=512m" "-server"]
   :dependencies [
-  [org.clojure/clojure "1.6.0"]
+  [org.clojure/clojure "1.7.0"]
   [cheshire "5.5.0"]
   [http-kit "2.1.19"]])
